examples/test/testpolicy14960.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14960
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key11: value48
      key3: value44
      key4: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value4
      podSelector:
        matchLabels:
          key30: value24
          key27: value25
          key8: value32
